[package]
name = "async-sleep-aki"
version = "0.1.2"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = """
It provides simple `async_sleep()` that work well in both web browsers and native applications.
"""
keywords = ["webapp", "javascript", "desktop", "android"]
categories = [ "api-bindings", "asynchronous", "wasm", "web-programming" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.90.0"
repository = "https://github.com/aki-akaguma/async-sleep-aki"

[dependencies]
dioxus-core = { version="0.7.3", optional=true }

## for non browser
[target.'cfg(not(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown")))'.dependencies]
tokio = { version="1.49", features =["time"] }

## for browser
[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }


[dev-dependencies]
dioxus = { version = "0.7.2" }


[features]
default = ["dx"]
dx = ["dep:dioxus-core"]

[lib]
name = "async_sleep_aki"
path = "src/lib.rs"
